--- a/index.html
+++ b/index.html
@@ -13,7 +13,26 @@
     <h1>Everything is Awesome</h1><small>The Builders' Blocks Details</small>
     <nav>
       <button id="showAll">Show All Legos</button>
-      <button id="showBlue">Show Blue Legos</button>
+      <button id="showRed">Show Red Legos</button>
+      <button id="showGreen">Show Green Legos</button>
+
+      <div class="dropdown">
+        <button onclick="myFunction()" class="dropButton"></button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="#">solid</a>
+          <a href="#">transparent</a>
+          <a href="#">pearl</a>
+          <a href="#">chrome</a>
+          <a href="#">metallic</a>
+          <a href="#">milky</a>
+          <a href="#">glitter</a>
+          <a href="#">speckle</a>
+          <a href="#">ink</a>
+          <a href="#">process</a>
+          <a href="#">modulex</a>
+        </div>
+      </div>
+
     </nav>
   </header>
   <main>
